Create the DSK image if it doesn't already exist.

--- a/Playground/Makefile
+++ b/Playground/Makefile
@@ -6,8 +6,14 @@ DELETE=$(IMAGETOOL) del $(DISK_FORMAT) $(DISK_IMAGE)
 PUT=$(IMAGETOOL) put $(DISK_FORMAT) $(DISK_IMAGE)
 PUT_TEST_BIN=$(PUT) TEST.BIN TEST.BIN --ftype=binary
 PUT_TEST_BAS=$(PUT) TEST.BAS TEST.BAS --ftype=basic --ascii=ascii
-CREATE_DISK=$(IMAGETOOL) create $(DISK_FORMAT) $@ -tracks=35
+CREATE_DISK=$(IMAGETOOL) create $(DISK_FORMAT) TEST.DSK -tracks=35
 ASSEMBLER_ARGS=--6809 --format=decb --pragma=6809,c,cd,m80ext,qrts,forwardrefmax,6800compat --symbols-nolocals --list=$*.lst --map=$*.map --output=$@
+
+!IF EXIST(.\TEST.DSK)
+!ELSE
+!   IF [$(CREATE_DISK)]
+!   ENDIF
+!ENDIF
 
 TEST.DSK: TEST.BIN TEST.BAS
     -$(DELETE) TEST.BIN
